--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -7,227 +7,57 @@
     <div class="card-body">
         <!-- Main student badge content goes here -->
         <!-- <h5>Earned points</h5> -->
-        <!--Grid column-->
-        <div class="col-xl-12 col-md-6 mb-4">
 
-            <!--Card-->
-            <div class="card card-cascade cascading-admin-card" style="background-color: #b3cce6">
+        {% for badge in badges %}
+            <!--Grid column-->
+            <div class="col-xl-12 col-md-6 mb-4">
+                <!--Card-->
+                <div class="card card-cascade cascading-admin-card" style="background-color: #b3cce6">
 
-                <!--Card Data-->
-                <div class="admin-up">
-                    <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/College_Knowledge.png">
-                    <div class="data">
-                        {% for r, p in points %}
-                        {% if r == 'College Knowledge' %}
-                        <h3 class="font-weight-bold dark-grey-text">{{ r }}</h3>
+                    <!--Card Data-->
+                    <div class="admin-up">
+                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/{{ badge.picture }}">
+                        <div class="data">
+                            <h3 class="font-weight-bold dark-grey-text">{{ badge.badge_name }}</h3>
+                        </div>
                     </div>
-                </div>
-                <!--/.Card Data-->
+                    <!--/.Card Data-->
 
-                <!--Card content-->
-                <div class="card-body">
-                    <div class="progress" style="height:30px">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <!--Text-->
-                            <p class="card-text" style="font-size: 150%">Total points earned: {{ p }} points</p>
-                            <p class="card-text" style="font-size: 150%">Point until next level: points</p>
-                            <div class="row">
-                                <div class="col-lg-5">
-                                    <button id="button_1" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</a></button>
+                    <!--Card content-->
+                    <div class="card-body">
+                        <div class="progress" style="height:30px">
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ progress[badge.badge_id].total_points }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ progress[badge.badge_id].total_points }}%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <!--Text-->
+                                <p class="card-text" style="font-size: 150%">Total points earned: {{ progress[badge.badge_id].total_points }} points</p>
+                                <p class="card-text" style="font-size: 150%">Point until next level: {{ progress[badge.badge_id].to_next_level }} points</p>
+                                <div class="row">
+                                    <div class="col-lg-5">
+                                        <button id="button_1" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</a></button>
+                                    </div>
+                                    <div class="col-lg-7">
+                                        <button id="pbutton_1" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
+                                    </div>
                                 </div>
-                                <div class="col-lg-7">
-                                    <button id="pbutton_1" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="progress-circle p{{ progress[badge.badge_id].total_points }}">
+                                   <span>Level</span>
+                                   <div class="left-half-clipper">
+                                      <div class="first50-bar"></div>
+                                      <div class="value-bar"></div>
+                                   </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
-                            <div class="progress-circle p{{ p }}">
-                               <span>Level</span>
-                               <div class="left-half-clipper">
-                                  <div class="first50-bar"></div>
-                                  <div class="value-bar"></div>
-                               </div>
-                            </div>
-                        </div>
                     </div>
+                    <!--/.Card content-->
                 </div>
-                <!--/.Card content-->
+                <!--/.Card-->
             </div>
-            <!--/.Card-->
-
-        </div>
-        <!--Grid column-->
-        <br>
-        <!--Grid column-->
-        <div class="col-xl-12 col-md-6 mb-6">
-
-            <!--Card-->
-            <div class="card card-cascade cascading-admin-card" style="background-color: #cccccc">
-
-                <!--Card Data-->
-                <div class="admin-up">
-                    <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/Career_Pro.png">
-                    <div class="data">
-                        {% elif r == 'Career Pro' %}
-                        <h3 class="font-weight-bold dark-grey-text">{{ r }}</h3>
-                        <p>{{ p }}</p>
-                    </div>
-                </div>
-                <!--/.Card Data-->
-
-                <!--Card content-->
-                <div class="card-body">
-                    <div class="progress" style="height:30px">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <!--Text-->
-                            <p class="card-text" style="font-size: 150%">Total points earned: {{ p }} points</p>
-                            <p class="card-text" style="font-size: 150%">Point until next level: {{ to_next_lv }} points</p>
-                            <div class="row">
-                                <div class="col-lg-5">
-                                    <button id="button_2" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</button>
-                                </div>
-                                <div class="col-lg-7">
-                                    <button id="pbutton_2" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="progress-circle p{{ p }}">
-                               <span>Level</span>
-                               <div class="left-half-clipper">
-                                  <div class="first50-bar"></div>
-                                  <div class="value-bar"></div>
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.Card content-->
-
-            </div>
-            <!--/.Card-->
-
-        </div>
-        <!--Grid column-->
-        <br>
-        <!--Grid column-->
-        <div class="col-xl-12 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card card-cascade cascading-admin-card" style="background-color: #e6ff99">
-
-                <!--Card Data-->
-                <div class="admin-up">
-                    <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/Professional_Development.png">
-                    <div class="data">
-                        {% elif r == 'Professional Development' %}
-                        <h3 class="font-weight-bold dark-grey-text">{{ r }}</h3>
-                        <p>{{ p }}</p>
-                    </div>
-                </div>
-                <!--/.Card Data-->
-
-                <!--Card content-->
-                <div class="card-body">
-                    <div class="progress" style="height:30px">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <!--Text-->
-                            <p class="card-text" style="font-size: 150%">Total points earned: {{ p }} points</p>
-                            <p class="card-text" style="font-size: 150%">Point until next level: {{ to_next_lv }} points</p>
-                            <div class="row">
-                                <div class="col-lg-5">
-                                    <button id="button_3" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</button>
-                                </div>
-                                <div class="col-lg-7">
-                                    <button id="pbutton_3" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="progress-circle p{{ p }}">
-                               <span>Level</span>
-                               <div class="left-half-clipper">
-                                  <div class="first50-bar"></div>
-                                  <div class="value-bar"></div>
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.Card content-->
-
-            </div>
-            <!--/.Card-->
-
-        </div>
-        <!--Grid column-->
-        <br>
-        <!--Grid column-->
-        <div class="col-xl-12 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card card-cascade cascading-admin-card" style="background-color: #ffd699">
-
-                <!--Card Data-->
-                <div class="admin-up">
-                    <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/MESA_Expert.png">
-                    <div class="data">
-                        {% else %}
-                        <h3 class="font-weight-bold dark-grey-text">{{ r }}</h3>
-                        <p>{{ p }}</p>
-                    </div>
-                </div>
-                <!--/.Card Data-->
-
-                <!--Card content-->
-                <div class="card-body">
-                    <div class="progress" style="height:30px">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <!--Text-->
-                            <p class="card-text" style="font-size: 150%">Total points earned: {{ p }} points</p>
-                            <p class="card-text" style="font-size: 150%">Point until next level: {{ to_next_lv }} points</p>
-                            <div class="row">
-                                <div class="col-lg-5">
-                                    <button id="button_4" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</button>
-                                </div>
-                                <div class="col-lg-7">
-                                    <button id="pbutton_4" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="progress-circle p{{ p }}">
-                               <span>Level</span>
-                               <div class="left-half-clipper">
-                                  <div class="first50-bar"></div>
-                                  <div class="value-bar"></div>
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.Card content-->
-                {% endif %}
-                {% endfor %}
-
-            </div>
-            <!--/.Card-->
-
-        </div>
-        <!--Grid column-->
-
+        {% endfor %}
     </div>
 </div>
 <!--/.Panel-->
