--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="card-body">
                                     <table>
-                                        {% if demo_days|length >= 1 %}
+                                        {% if demo_days|length > 0 %}
                                             <tr><td>{{ demo_days[0]['summary'] }}</td></tr>
                                             <tr><td>{{ demo_days[0]['start_string'] }}</td></tr>
                                             <tr><td> <span id="clock1" data-date-string-one={{demo_days[0][ 'date_string' ]}}></span></td></tr>
@@ -174,7 +174,7 @@
                                 </div>
                                 <div class="card-body">
                                     <table>
-                                        {% if demo_days|length >= 2 %}
+                                        {% if demo_days|length > 1 %}
                                             <tr><td>{{ demo_days[1]['summary'] }}</td></tr>
                                             <tr><td>{{ demo_days[1]['start_string'] }}</td></tr>
                                             <tr><td><span id="clock2" data-date-string-two={{demo_days[1][ 'date_string' ]}}></span></td></tr>
@@ -193,7 +193,7 @@
                                 </div>
                                 <div class="card-body">
                                     <table>
-                                        {% if mesa_days|length >= 1 %}
+					{% if mesa_days|length > 0 %}
                                             <tr><td>{{ mesa_days[0]['summary'] }}</td></tr>
                                             <tr><td>{{ mesa_days[0]['start_string'] }}</td></tr>
                                             <tr><td><span id="clock3" data-date-string-three={{mesa_days[0][ 'date_string' ]}}></span></td></tr>
