--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -24,11 +24,15 @@
     <link href="../static/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"> -->
     <link rel="stylesheet" type="text/css" href="../static/css/dataTables.bootstrap4.min.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/css/flipclock.css"/>
     <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
     <link href="../static/css/css-circular-prog-bar.css" media="all" rel="stylesheet" type="text/css"/>
     <style>
+        h1, h2, h3, h4, h5, h6 {
+          font-family: Merriweather;
+        }
         body {
-            font-family: Merriweather;
+            font-family: Merriweather!important;
         }
         .min-chart .percent:after {
             display: none;
@@ -42,7 +46,7 @@
           font-size: 18px;
           border: none;
           outline: none;
-          background-color: red;
+          background-color: #716558;
           color: white;
           cursor: pointer;
           padding: 15px;
@@ -125,14 +129,14 @@
     <script type="text/javascript" src="../static/js/calendar.resize.js"></script>
     <script type="text/javascript" src="../static/js/sideNavInit.js"></script>
     <script type="text/javascript" src="../static/js/jquery-ui.min.js"></script>
-
+    <script type="text/javascript" src="../static/js/flipclock.min.js"></script>
 
     <script type="text/javascript">
         
         $(".date-custom").attr("autocomplete", "off");
         
         $('#upEvent').DataTable({
-           "dom": 'f<"top"i>rt<"bottom"lp><"clear">'
+           "dom": 'f<"top">rt<"bottom"ilp><"clear">'
         });
         $(function () {
             $('.min-chart#chart-sales').easyPieChart({
