--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -216,9 +216,11 @@
                         <div class="card-header white-text primary-color">
                             Calendar
                         </div>
-                         <div class="embed-responsive embed-responsive-4by3">
+                        <div class="embed-responsive embed-responsive-4by3">
+                            <!-- <iframe class="cal-iframe embed-responsive-item" id='cv_if5' src='http://cdn.instantcal.com/cvir.html?id=cv_nav5&file=https://calendar.google.com/calendar/ical/bartlett%40pdx.edu/public/basic.ics&theme=BL&ccolor=%23ffffc0&dims=1&gtype=cv_monthgrid&gcloseable=0&gnavigable=1&gperiod=month&itype=cv_simpleevent' allowTransparency=true scrolling='no' frameborder=0 height=auto width=100%></iframe> --!>
+                            <iframe src="https://calendar.google.com/calendar/embed?src=bartlett%40pdx.edu&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
+	                    <div></div> 
                             
-                            <iframe class="cal-iframe embed-responsive-item" id='cv_if5' src='http://cdn.instantcal.com/cvir.html?id=cv_nav5&file=https://calendar.google.com/calendar/ical/bartlett%40pdx.edu/public/basic.ics&theme=BL&ccolor=%23ffffc0&dims=1&gtype=cv_monthgrid&gcloseable=0&gnavigable=1&gperiod=month&itype=cv_simpleevent' allowTransparency=true scrolling='no' frameborder=0 height=auto width=100%></iframe>
                         </div>
                     </div>
                     <!--/.Panel-->
@@ -244,7 +246,7 @@
                                             <table class="table table-striped table-bordered table-responsive-md" cellspacing="0" width="100%" id="upEvent">
                                                 <thead>
                                                     <th>General Events</th>
-                                                    <th>Remain Days</th>
+                                                    <th>Remaining Days</th>
                                                     <th>Time</th>
 						    <th>Location</th>
                                                 </thead>
